--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@
     --fundo: #F9F7F2;
 }
 
+body {
+    color: var(--fundo);
+}
 
 .nav-container {
     width: 100%;
@@ -23,6 +26,8 @@
 
 .nav-bar {
     width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
     height: 120px;
     background-color: var(--secondario);
     border-radius: 30px;
@@ -32,13 +37,13 @@
     display: flex;
 }
 
-.logo{
+.logo {
     display: flex;
     align-items: center;
     height: 77px;
 }
 
-.itens-menu{
+.itens-menu {
     display: flex;
     align-items: center;
     gap: 64px;
@@ -50,18 +55,152 @@
     cursor: pointer;
 }
 
-.itens-menu li:hover{
+.itens-menu li:hover {
     color: var(--realce);
 }
 
-.icons-menu{
+.icons-menu {
     display: flex;
     align-items: center;
     gap: 32px;
     cursor: pointer;
 }
 
+.hero-section {
+    width: 100%;
+    background-color: var(--primario);
+    box-shadow: 0px 32px 32px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 0 0 80px 80px;
+    padding: 32px;
+}
 
+.hero-section-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+    max-width: 1440px;
+}
+
+.hero-text {
+    color: var(--texto);
+}
+
+.hero-title {
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 48px;
+    padding-bottom: 32px;
+}
+
+.hero-title span {
+    color: var(--realce);
+}
+
+.hero-btn {
+    padding: 16px 32px;
+    color: var(--texto);
+    font-family: "Poppins", sans-serif;
+    background-color: var(--realce);
+    border-radius: 32px;
+    font-size: 16px;
+    font-weight: 500;
+    border: none;
+}
+
+.img-hero {
+    width: 686px;
+}
+
+.ratings {
+    display: flex;
+    justify-content: center;
+    gap: 180px;
+    padding: 88px 0;
+}
+
+.ball {
+    width: 136px;
+    height: 136px;
+    background-color: var(--secondario);
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.ball p {
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    line-height: 16px;
+    padding-top: 8px;
+}
+
+.section-products {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 36px;
+}
+
+.section-products-title {
+    color: var(--realce);
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.section-cards-products {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1440px;
+}
+
+.card-product-img {
+    background-color: var(--secondario);
+    border-radius: 16px;
+    width: 244px;
+    height: 328px;
+    padding: 16px;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.card-product-info p {
+    color: var(--realce);
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    margin-top: 8px;
+    font-weight: 600;
+}
+
+.card-product-price {
+    display: flex;
+    margin-top: 32px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card-product-price p {
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.card-product-price button {
+    background-color: var(--realce);
+    color: var(--texto);
+    border: none;
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    border-radius: 32px;
+    padding: 0 16px;
+}
 
 /* @media (width <= 768px) {
     .nav-container {
